Add angular material

--- a/manage-tool/nx.json
+++ b/manage-tool/nx.json
@@ -29,6 +29,9 @@
     "daily-e2e": {
       "tags": [],
       "implicitDependencies": ["daily"]
+    },
+    "material": {
+      "tags": []
     }
   }
 }
