--- a/manage-tool/package.json
+++ b/manage-tool/package.json
@@ -29,15 +29,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.0",
+    "@angular/animations": "^11.0.6",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "^11.0.0",
     "@angular/compiler": "^11.0.0",
     "@angular/core": "^11.0.0",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^11.0.0",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
-    "@nrwl/angular": "11.0.20",
+    "@nrwl/angular": "^11.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
@@ -48,10 +51,10 @@
     "@angular/compiler-cli": "^11.0.0",
     "@angular/language-service": "^11.0.0",
     "@nrwl/cli": "11.0.20",
-    "@nrwl/cypress": "11.0.20",
-    "@nrwl/jest": "11.0.20",
+    "@nrwl/cypress": "^11.1.1",
+    "@nrwl/jest": "^11.1.1",
     "@nrwl/tao": "11.0.20",
-    "@nrwl/workspace": "11.0.20",
+    "@nrwl/workspace": "^11.1.1",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
     "codelyzer": "^6.0.0",
