Init header & footer

--- a/manage-tool/tsconfig.base.json
+++ b/manage-tool/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@manage-tool/material": ["libs/material/src/index.ts"]
+      "@manage-tool/material": ["libs/material/src/index.ts"],
+      "@manage-tool/ui": ["libs/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
