--- a/nx.json
+++ b/nx.json
@@ -1,14 +1,9 @@
 {
   "npmScope": "manage-tool",
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "implicitDependencies": {
     "angular.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
@@ -17,24 +12,14 @@
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
   "projects": {
-    "daily": {
-      "tags": []
-    },
-    "daily-e2e": {
-      "tags": [],
-      "implicitDependencies": ["daily"]
-    },
-    "material": {
-      "tags": []
-    },
-    "ui": {
-      "tags": []
-    }
+    "daily": { "tags": [] },
+    "daily-e2e": { "tags": [], "implicitDependencies": ["daily"] },
+    "material": { "tags": [] },
+    "ui": { "tags": [] },
+    "models": { "tags": [] }
   }
 }
