--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "npm i --legacy-peer-deps && ng build --prod"
   },
   "private": true,
   "dependencies": {
