--- a/nx.json
+++ b/nx.json
@@ -1,9 +1,14 @@
 {
   "npmScope": "manage-tool",
-  "affected": { "defaultBase": "master" },
+  "affected": {
+    "defaultBase": "master"
+  },
   "implicitDependencies": {
     "angular.json": "*",
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
@@ -12,14 +17,37 @@
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
+      "options": {
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "test",
+          "e2e"
+        ]
+      }
     }
   },
   "projects": {
-    "daily": { "tags": [] },
-    "daily-e2e": { "tags": [], "implicitDependencies": ["daily"] },
-    "material": { "tags": [] },
-    "ui": { "tags": [] },
-    "models": { "tags": [] }
+    "daily": {
+      "tags": []
+    },
+    "daily-e2e": {
+      "tags": [],
+      "implicitDependencies": [
+        "daily"
+      ]
+    },
+    "material": {
+      "tags": []
+    },
+    "ui": {
+      "tags": []
+    },
+    "models": {
+      "tags": []
+    },
+    "electron": {
+      "tags": []
+    }
   }
 }
