--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "postinstall": "exitzero electron-builder install-app-deps",
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
@@ -52,17 +52,25 @@
     "@angular/language-service": "^11.0.0",
     "@nrwl/cli": "11.0.20",
     "@nrwl/cypress": "^11.1.1",
+    "@nrwl/eslint-plugin-nx": "11.4.0",
     "@nrwl/jest": "^11.1.1",
+    "@nrwl/linter": "11.4.0",
     "@nrwl/tao": "11.0.20",
     "@nrwl/workspace": "^11.1.1",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^6.0.0",
     "cypress": "^5.5.0",
     "dotenv": "6.2.0",
+    "electron": "^11.2.0",
     "eslint": "7.10.0",
+    "eslint-config-prettier": "6.0.0",
+    "exitzero": "^1.0.1",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
+    "nx-electron": "^10.0.3",
     "prettier": "2.1.2",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
