--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "manage-tool",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "http://localhost:4200",
+  "node-remote": "http://localhost:4200",
+  "window": {
+    "frame": false,
+    "fullscreen": true,
+    "icon": "assets/icon.png"
+  },
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
@@ -25,7 +32,9 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "dev": "nw src/",
+    "prod": "nwbuild --platforms win64 --buildDir dist/ src/"
   },
   "private": true,
   "dependencies": {
@@ -63,6 +72,8 @@
     "eslint": "7.10.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
+    "nw": "^0.52.0",
+    "nw-builder": "^3.5.7",
     "prettier": "2.1.2",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
