--- a/package.json
+++ b/package.json
@@ -41,8 +41,15 @@
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
     "@nrwl/angular": "^11.1.1",
+    "apollo-server": "^2.22.1",
+    "apollo-server-express": "^2.22.1",
+    "express": "4.17.1",
+    "graphql": "^15.5.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "type-graphql": "^1.1.1",
+    "typedi": "^0.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
@@ -52,9 +59,12 @@
     "@angular/language-service": "^11.0.0",
     "@nrwl/cli": "11.0.20",
     "@nrwl/cypress": "^11.1.1",
+    "@nrwl/express": "^11.5.2",
     "@nrwl/jest": "^11.1.1",
+    "@nrwl/node": "11.5.2",
     "@nrwl/tao": "11.0.20",
     "@nrwl/workspace": "^11.1.1",
+    "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
     "codelyzer": "^6.0.0",
