--- a/package.json
+++ b/package.json
@@ -41,10 +41,14 @@
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
     "@nrwl/angular": "^11.1.1",
+    "apollo-angular": "^2.4.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
     "apollo-server": "^2.22.1",
     "apollo-server-express": "^2.22.1",
     "express": "4.17.1",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -54,23 +58,31 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular-eslint/eslint-plugin": "~1.0.0",
+    "@angular-eslint/eslint-plugin-template": "~1.0.0",
+    "@angular-eslint/template-parser": "~1.0.0",
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "^11.0.0",
     "@angular/language-service": "^11.0.0",
     "@nrwl/cli": "11.0.20",
     "@nrwl/cypress": "^11.1.1",
+    "@nrwl/eslint-plugin-nx": "11.4.0",
     "@nrwl/express": "^11.5.2",
     "@nrwl/jest": "^11.1.1",
+    "@nrwl/linter": "11.4.0",
     "@nrwl/node": "11.5.2",
     "@nrwl/tao": "11.0.20",
     "@nrwl/workspace": "^11.1.1",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^6.0.0",
     "cypress": "^5.5.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
+    "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
     "prettier": "2.1.2",
