--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,14 +10,15 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2017", "dom"],
+    "lib": ["es2017", "esnext.asynciterable", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@manage-tool/material": ["libs/material/src/index.ts"],
       "@manage-tool/ui": ["libs/ui/src/index.ts"],
-      "@manage-tool/models": ["libs/models/src/index.ts"]
+      "@manage-tool/models": ["libs/models/src/index.ts"],
+      "@manage-tool/apollo": ["libs/apollo/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
