--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               }
             ],
             "styles": ["apps/daily/src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["graphql-tag", "zen-observable"]
           },
           "configurations": {
             "production": {
