--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
+    "@apollo/client": "^3.3.13",
     "@nrwl/angular": "^11.1.1",
     "apollo-angular": "^2.4.0",
     "apollo-cache-inmemory": "^1.6.6",
@@ -61,7 +62,7 @@
     "@angular-eslint/eslint-plugin": "~1.0.0",
     "@angular-eslint/eslint-plugin-template": "~1.0.0",
     "@angular-eslint/template-parser": "~1.0.0",
-    "@angular/cli": "~11.0.0",
+    "@angular/cli": "^11.2.7",
     "@angular/compiler-cli": "^11.0.0",
     "@angular/language-service": "^11.0.0",
     "@nrwl/cli": "11.0.20",
