--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@angular/common": "^11.0.0",
     "@angular/compiler": "^11.0.0",
     "@angular/core": "^11.0.0",
-    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^11.0.0",
     "@angular/material": "^11.0.4",
     "@angular/platform-browser": "^11.0.0",
@@ -47,6 +46,7 @@
     "apollo-client": "^2.6.10",
     "apollo-server": "^2.22.1",
     "apollo-server-express": "^2.22.1",
+    "class-validator": "^0.13.1",
     "express": "4.17.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.3",
